; ModuleID = '/home/carl/AnghaBench/git/extr_shallow.c_set_alternate_shallow_file.c'
source_filename = "/home/carl/AnghaBench/git/extr_shallow.c_set_alternate_shallow_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.repository = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32, i64 }

@.str = private unnamed_addr constant [75 x i8] c"is_repository_shallow must not be called before set_alternate_shallow_file\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @set_alternate_shallow_file(%struct.repository* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.repository*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.repository* %0, %struct.repository** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.repository*, %struct.repository** %4, align 8
  %8 = getelementptr inbounds %struct.repository, %struct.repository* %7, i32 0, i32 0
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  %12 = icmp ne i32 %11, -1
  br i1 %12, label %13, label %15

13:                                               ; preds = %3
  %14 = call i32 @BUG(i8* getelementptr inbounds ([75 x i8], [75 x i8]* @.str, i64 0, i64 0))
  br label %15

15:                                               ; preds = %13, %3
  %16 = load %struct.repository*, %struct.repository** %4, align 8
  %17 = getelementptr inbounds %struct.repository, %struct.repository* %16, i32 0, i32 0
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 1
  %20 = load i64, i64* %19, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %26

22:                                               ; preds = %15
  %23 = load i32, i32* %6, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %26, label %25

25:                                               ; preds = %22
  br label %39

26:                                               ; preds = %22, %15
  %27 = load %struct.repository*, %struct.repository** %4, align 8
  %28 = getelementptr inbounds %struct.repository, %struct.repository* %27, i32 0, i32 0
  %29 = load %struct.TYPE_2__*, %struct.TYPE_2__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 1
  %31 = load i64, i64* %30, align 8
  %32 = call i32 @free(i64 %31)
  %33 = load i8*, i8** %5, align 8
  %34 = call i64 @xstrdup_or_null(i8* %33)
  %35 = load %struct.repository*, %struct.repository** %4, align 8
  %36 = getelementptr inbounds %struct.repository, %struct.repository* %35, i32 0, i32 0
  %37 = load %struct.TYPE_2__*, %struct.TYPE_2__** %36, align 8
  %38 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %37, i32 0, i32 1
  store i64 %34, i64* %38, align 8
  br label %39

39:                                               ; preds = %26, %25
  ret void
}

declare dso_local i32 @BUG(i8*) #1

declare dso_local i32 @free(i64) #1

declare dso_local i64 @xstrdup_or_null(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
